Added custom layout / theme demo.
svn changeset:1110 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -86,11 +86,26 @@
 	 This example demonstrates layouts for Tookit application.
 	</p>
 	<p>
-	 Demonstrates: how to create
+	 Demonstrates: how to use
 	 <code>com.itmill.toolkit.ui.OrderedLayout</code>,
 	 <code>com.itmill.toolkit.ui.GridLayout</code>,
 	 <code>com.itmill.toolkit.ui.Panel</code> and
 	 <code>com.itmill.toolkit.ui.TabSheet</code> 
+    </p>
+	</div>	
+  </div>
+  
+  <div id="feature-browser">
+	<h3><a href="CustomLayoutDemo">CustomLayoutDemo</a></h3>
+	<div class="option">
+	<p>
+	 This example demonstrates how web designer may create multiple 
+	 html pages and how Toolkit UI components are attached to these 
+	 html pages using custom layout functionality.
+	</p>
+	<p>
+	 Demonstrates: how to create
+	 <code>com.itmill.toolkit.ui.CustomLayout</code>
     </p>
 	</div>	
   </div>
