--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -99,9 +99,10 @@
 	<h3><a href="CustomLayoutDemo">CustomLayoutDemo</a></h3>
 	<div class="option">
 	<p>
-	 This example demonstrates how web designer may create multiple 
-	 html pages and how Toolkit UI components are attached to these 
-	 html pages using custom layout functionality.
+	 This example demonstrates how Toolkit interacts with HTML pages
+	 that web designer usually creates. Shows how Toolkit UI components
+	 are placed to HTML pages and how HTML pages are rendered within Toolkit
+	 framework.
 	</p>
 	<p>
 	 Demonstrates: how to create
