Added source code link for ToolkitMashup.
svn changeset:1131 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,7 +25,8 @@
 	 <span class="link"><a href="features/?renderingMode=html">HTML mode</a></span>
 	 <span class="desc">Select page based request/response technology mode</span>
 	</div>
-	<br />	
+	<br />Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/demo/features">browse features folder</a></span>
   </div>
   
   <div id="sample-code">
@@ -82,6 +83,8 @@
 	 <b>Note:</b> Integrated TableDemo application is the same
 	 application instance that can be accessed as standalone application, see <em>TableDemo</em>.
 	</div>	
+	<br />Source code:
+	<span class="link"><a href="ToolkitMashup.jsp.txt">ToolkitMashup.jsp</a></span>
   </div>
   
   <div id="feature-browser">
