Added Joonas's demo.
svn changeset:1138 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,7 +25,7 @@
 	 <span class="link"><a href="features/?renderingMode=html">HTML mode</a></span>
 	 <span class="desc">Select page based request/response technology mode</span>
 	</div>
-	<br />Source code:
+	<br /><br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/features">browse features folder</a></span>
   </div>
   
@@ -234,6 +234,17 @@
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/Parameters.java.html">Parameters.java</a></span>
   </div>
+
+  <div id="feature-browser">
+	<h3><a href="BufferedComponents">Buffered UI components demo</a></h3>
+	<div class="option">
+	 Explains how to use buffering with UI components, and how to perform commit and discard functions.
+	 With buffered UI components underlying data objects and UI objects have separate states.
+	</div>
+	<br />Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/demo/BufferedComponents.java.html">BufferedComponents.java</a></span>
+  </div>
+  
 
 </div><!-- // Container -->
 
