Forced all demos (except HTML mode FeatureBrowser) to Ajax mode.
svn changeset:1249 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,15 +14,15 @@
   <div id="feature-browser">
 	<h4>Feature Browser</h4>
 	<div class="option">
-	 <span class="link"><a href="features/?renderingMode=detect">Autodetected mode</a></span>
+	 <span class="link"><a href="features?renderingMode=detect">Autodetected mode</a></span>
 	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTML mode</span>
 	</div>
 	<div class="option">
-	 <span class="link"><a href="features/?renderingMode=ajax">AJAX mode</a></span>
+	 <span class="link"><a href="features?renderingMode=ajax">AJAX mode</a></span>
 	 <span class="desc">Select AJAX-based technology mode</span>
 	</div>
 	<div class="option">
-	 <span class="link"><a href="features/?renderingMode=html">HTML mode</a></span>
+	 <span class="link"><a href="features?renderingMode=html">HTML mode</a></span>
 	 <span class="desc">Select page based request/response technology mode</span>
 	</div>
 	<br /><br />Source code:
@@ -32,11 +32,11 @@
   <div id="sample-code">
 	<h3>Simple application demos</h3>
 	<div class="option">
-	 <span class="link"><a href="HelloWorld">HelloWorld</a></span>
+	 <span class="link"><a href="HelloWorld?renderingMode=ajax">HelloWorld</a></span>
 	 <span class="desc">Simple Toolkit application.</span>
 	</div>
 	<div class="option">
-	 <span class="link"><a href="Calc">Calc</a></span>
+	 <span class="link"><a href="Calc?renderingMode=ajax">Calc</a></span>
 	 <span class="desc">Simple Toolkit application where events are used.</span>
 	</div>
 	<br /><br />Source code:
@@ -46,7 +46,7 @@
   </div>
   
   <div id="sample-code">
-	<h3><a href="UpgradingSample">Long lifecycle of Toolkit applications</a></h3>
+	<h3><a href="UpgradingSample?renderingMode=ajax">Long lifecycle of Toolkit applications</a></h3>
 	<div class="option">
 	<p>
 	Demonstrates sample <a href="http://www.millstone.org">Millstone</a> application that was ajaxified (upgraded to Toolkit 4.0.0)
@@ -88,7 +88,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="LayoutDemo">Layout demo</a></h3>
+	<h3><a href="LayoutDemo?renderingMode=ajax">Layout demo</a></h3>
 	<div class="option">
 	<p>
 	 This example demonstrates layouts for Tookit application.
@@ -106,7 +106,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="CustomLayoutDemo">Custom layout and custom theme demo</a></h3>
+	<h3><a href="CustomLayoutDemo?renderingMode=ajax">Custom layout and custom theme demo</a></h3>
 	<div class="option">
 	<p>
 	 This example demonstrates how Toolkit interacts with HTML pages
@@ -124,7 +124,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="QueryContainerDemo">Tree using QueryContainer demo</a></h3>
+	<h3><a href="QueryContainerDemo?renderingMode=ajax">Tree using QueryContainer demo</a></h3>
 	<div class="option">
 	<p>
 	 This example shows how Table, Select and Tree UI components can use Containers. 
@@ -143,7 +143,7 @@
   </div>
   
    <div id="feature-browser">
-	<h3><a href="TableDemo">Table demo</a></h3>
+	<h3><a href="TableDemo?renderingMode=ajax">Table demo</a></h3>
 	<div class="option">
 	 <p>
 	 Similar to <em>Tree using QueryContainer demo</em> but uses different style
@@ -161,7 +161,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="TreeFilesystemContainer">Tree using FilesystemContainer demo</a></h3>
+	<h3><a href="TreeFilesystemContainer?renderingMode=ajax">Tree using FilesystemContainer demo</a></h3>
 	<div class="option">
 	 <p>
 	 Browsable file explorer using Toolkit Tree component.
@@ -178,7 +178,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="TreeFilesystem">Tree item handling demo</a></h3>
+	<h3><a href="TreeFilesystem?renderingMode=ajax">Tree item handling demo</a></h3>
 	<div class="option">
 	 <p>
 	 Browsable file explorer using Toolkit Tree component.
@@ -194,7 +194,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="SelectDemo">Select demo</a></h3>
+	<h3><a href="SelectDemo?renderingMode=ajax">Select demo</a></h3>
 	<div class="option">
 	<p>
 	 This example shows select component with default and lazy loading functionality enabled (a.k.a Google Suggest).
@@ -207,7 +207,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="ModalWindow">Modal window</a></h3>
+	<h3><a href="ModalWindow?renderingMode=ajax">Modal window</a></h3>
 	<div class="option">
 	 Example of how Modal Windows may be created using Window component.
 	</div>
@@ -216,7 +216,7 @@
   </div>
 
   <div id="feature-browser">
-	<h3><a href="KeyboardShortcut">Keyboard events demo</a></h3>
+	<h3><a href="KeyboardShortcut?renderingMode=ajax">Keyboard events demo</a></h3>
 	<div class="option">
 	 Contains few Toolkit UI components that can be interacted by pressing keys in keyboard.
 	</div>
@@ -225,7 +225,7 @@
   </div>
   
   <div id="feature-browser">
-	<h3><a href="Parameters">URI and Parameter handling demo</a></h3>
+	<h3><a href="Parameters?renderingMode=ajax">URI and Parameter handling demo</a></h3>
 	<div class="option">
 	 This is a demonstration of how URL parameters can be recieved and handled.
 	 Parameters and URL:s can be received trough the windows by registering
@@ -236,7 +236,7 @@
   </div>
 
   <div id="feature-browser">
-	<h3><a href="BufferedComponents">Buffered UI components demo</a></h3>
+	<h3><a href="BufferedComponents?renderingMode=ajax">Buffered UI components demo</a></h3>
 	<div class="option">
 	 Explains how to use buffering with UI components, and how to perform commit and discard functions.
 	 With buffered UI components underlying data objects and UI objects have separate states.
