Added new demo FilterSelect, changed it's layout and texts.
svn changeset:1264 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -207,6 +207,19 @@
   </div>
   
   <div id="feature-browser">
+	<h3><a href="FilterSelect?renderingMode=ajax">FilterSelect demo</a></h3>
+	<div class="option">
+	<p>
+	 This example shows three select components with lazy loading functionality enabled.
+	 First select works like Google Suggest, second uses "Contains" filter and third uses custom "Ends with" filter.
+	 Click to select components and type few letters using your keyboard to see it in action.
+	</p>
+	</div>
+	Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/demo/FilterSelect.java.html">FilterSelect.java</a></span>
+  </div>
+  
+  <div id="feature-browser">
 	<h3><a href="ModalWindow?renderingMode=ajax">Modal window</a></h3>
 	<div class="option">
 	 Example of how Modal Windows may be created using Window component.
