Added selectdemo back to trunk: major issues fixed.
svn changeset:1315 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,7 @@
 
 <div id="toolkit"></div>
 
+
   <div class="feature-browser">
 	<h4>Feature Browser</h4>
 	<div class="option">
@@ -177,6 +178,19 @@
 	</div>	
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TreeFilesystem.java.html">TreeFilesystem.java</a></span>
+  </div>
+  
+  <div class="feature-browser">
+	<h3><a href="SelectDemo?renderingMode=ajax">Select demo</a></h3>
+	<div class="option">
+	<p>
+	 This example shows select component with default and lazy loading functionality enabled (a.k.a Google Suggest).
+	 Click to first select component and type few letters using your keyboard to see it in action.
+	 Second select component has default functionality.
+	</p>
+	</div>
+	Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/demo/SelectDemo.java.html">SelectDemo.java</a></span>
   </div>
   
   <div class="feature-browser">
