"Keybinding is under development and considered as alpha quality" note added.
svn changeset:1317 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -186,7 +186,7 @@
 	<p>
 	 This example shows select component with default and lazy loading functionality enabled (a.k.a Google Suggest).
 	 Click to first select component and type few letters using your keyboard to see it in action.
-	 Second select component has default functionality.
+	 Second select component has default functionality. 
 	</p>
 	</div>
 	Source code:
@@ -219,6 +219,7 @@
 	<h3><a href="KeyboardShortcut?renderingMode=ajax">Keyboard events demo</a></h3>
 	<div class="option">
 	 Contains few Toolkit UI components that can be interacted by pressing keys in keyboard.
+	 <b>Note</b>: This feature is under development and is considered as alpha.
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/KeyboardShortcut.java.html">KeyboardShortcut.java</a></span>
